fix: fix the position of scrolltop button to vertical-align:middle

--- a/css/inventchip.css
+++ b/css/inventchip.css
@@ -77,3 +77,10 @@ a.title:hover {
 .footer-nav ul li:first-child {
     margin-bottom: 15px;
 }
+
+
+/*scrolltop 按钮*/
+
+.scrolltop span {
+    vertical-align: middle;
+}
